# sqlite-db

./: .gitignore  Cargo.toml  README.md
libsqlite3-sys/: Cargo.toml  build.rs
scripts/: build.sh
src/: lib.rs  libvfs.js  metadata.rs  sqlite_opfs.rs
tests/: worker.rs
