[package]
name = "logseq-sqlite"
version = "0.0.5"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/logseq/logseq-db"
documentation = "https://docs.rs/logseq-sqlite"
homepage = "https://github.com/logseq/logseq-db"
categories = []
description = ""
keywords = []
readme = "README.md"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]
# crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
    "console",
    "FileSystemHandle",
    "FileSystemHandleKind",
    "FileSystemFileHandle",
    "FileSystemEntry",
    "File",
    "FileSystem",
    "FileReader",
    "Navigator",
    "StorageManager",
    "TextEncoder",
    "TextDecoder",
    "Window",
    "Worker",
    "WorkerGlobalScope",
    "WorkerNavigator",
    "FileSystemDirectoryHandle",
    "FileSystemGetFileOptions",
    "FileSystemSyncAccessHandle",
    "FileSystemReadWriteOptions",
] }
# rusqlite = { version = "0.29.0", features = ["bundled", "wasm32-wasi-vfs", "serde_json"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen-futures = "0.4.37"

getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.5.0", features = ["v4"] }
once_cell = "1.18.0"
serde = { version = "1.0.189", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
libsqlite3-sys = { path = "./libsqlite3-sys", features = ["bundled"] }
serde_json = "1.0.108"
bincode = "1.3.3"

# getrandom = { version = "0.2", features = ["js"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = true

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[workspace]
# members = ["libsqlite3-sys"]

[patch.crates-io]
libsqlite3-sys = { path = "./libsqlite3-sys" }
